; ModuleID = '/home/carl/AnghaBench/openssl/crypto/bn/extr_bn_gf2m.c_BN_GF2m_mod_div_arr.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/bn/extr_bn_gf2m.c_BN_GF2m_mod_div_arr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BN_GF2m_mod_div_arr(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  store i32 0, i32* %12, align 4
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @bn_check_top(i32* %13)
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @bn_check_top(i32* %15)
  %17 = load i32*, i32** %10, align 8
  %18 = call i32 @BN_CTX_start(i32* %17)
  %19 = load i32*, i32** %10, align 8
  %20 = call i32* @BN_CTX_get(i32* %19)
  store i32* %20, i32** %11, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %5
  br label %38

23:                                               ; preds = %5
  %24 = load i32*, i32** %9, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = call i32 @BN_GF2m_arr2poly(i32* %24, i32* %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %23
  br label %38

29:                                               ; preds = %23
  %30 = load i32*, i32** %6, align 8
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = load i32*, i32** %11, align 8
  %34 = load i32*, i32** %10, align 8
  %35 = call i32 @BN_GF2m_mod_div(i32* %30, i32* %31, i32* %32, i32* %33, i32* %34)
  store i32 %35, i32* %12, align 4
  %36 = load i32*, i32** %6, align 8
  %37 = call i32 @bn_check_top(i32* %36)
  br label %38

38:                                               ; preds = %29, %28, %22
  %39 = load i32*, i32** %10, align 8
  %40 = call i32 @BN_CTX_end(i32* %39)
  %41 = load i32, i32* %12, align 4
  ret i32 %41
}

declare dso_local i32 @bn_check_top(i32*) #1

declare dso_local i32 @BN_CTX_start(i32*) #1

declare dso_local i32* @BN_CTX_get(i32*) #1

declare dso_local i32 @BN_GF2m_arr2poly(i32*, i32*) #1

declare dso_local i32 @BN_GF2m_mod_div(i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @BN_CTX_end(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
